Adición de TilemapMapper para solucionar problema de escala con coordenadaas

--- a/Agentes/RanaBomberos.ipynb
+++ b/Agentes/RanaBomberos.ipynb
@@ -945,7 +945,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "PzxXYpWhShcH"
       },
@@ -954,8 +954,14 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Servidor escuchando en 127.0.0.1:65432...\n",
-            "Cliente conectado desde ('127.0.0.1', 55158)\n"
+            "Servidor escuchando en 127.0.0.1:65432...\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Cliente conectado desde ('127.0.0.1', 55612)\n"
           ]
         },
         {
@@ -972,24 +978,160 @@
           "text": [
             "Agentes creados: 6\n",
             " Rana apagó fuego en (3, 0)\n",
-            " Rana movida a (3, 6)\n",
-            " Rana abrió puerta en (5, 5)-(6, 5)\n",
-            " Rana eliminó humo en (5, 3)\n",
+            " Rana abrió puerta en (5, 0)-(6, 0)\n",
+            " Rana apagó fuego en (3, 5)\n",
+            " Rana apagó fuego en (5, 5)\n",
+            " Rana cerró puerta en (5, 2)-(5, 3)\n",
             " Rana dañó pared en (0, 1) lado 0\n",
-            " Rana dañó pared en (5, 0) lado 1\n",
             "Pared destruida en lado 3\n",
-            "Daño en pared por fuego en: (4, 2) lado 3\n"
-          ]
-        },
-        {
-          "ename": "ValueError",
-          "evalue": "invalid literal for int() with base 10: 'f'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-            "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 48\u001b[39m\n\u001b[32m     28\u001b[39m model.step()\n\u001b[32m     29\u001b[39m grid = get_grid(model).tolist()   \u001b[38;5;66;03m# convertir numpy → lista\u001b[39;00m\n\u001b[32m     31\u001b[39m data = {\n\u001b[32m     32\u001b[39m     \u001b[38;5;66;03m# Funciones generales\u001b[39;00m\n\u001b[32m     33\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mstep\u001b[39m\u001b[33m\"\u001b[39m: \u001b[38;5;28mint\u001b[39m(i),\n\u001b[32m     34\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mgrid\u001b[39m\u001b[33m\"\u001b[39m: grid,\n\u001b[32m     35\u001b[39m \n\u001b[32m     36\u001b[39m     \u001b[38;5;66;03m# Agentes (posiciones, AP, carry)\u001b[39;00m\n\u001b[32m     37\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33magent_pos\u001b[39m\u001b[33m\"\u001b[39m: [[\u001b[38;5;28mint\u001b[39m(x), \u001b[38;5;28mint\u001b[39m(y)] \u001b[38;5;28;01mfor\u001b[39;00m (x, y) \u001b[38;5;129;01min\u001b[39;00m [agent.pos \u001b[38;5;28;01mfor\u001b[39;00m agent \u001b[38;5;129;01min\u001b[39;00m model.schedule.agents]],\n\u001b[32m     38\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33magent_ap\u001b[39m\u001b[33m\"\u001b[39m: [\u001b[38;5;28mint\u001b[39m(agent.AP) \u001b[38;5;28;01mfor\u001b[39;00m agent \u001b[38;5;129;01min\u001b[39;00m model.schedule.agents],\n\u001b[32m     39\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33magent_carry\u001b[39m\u001b[33m\"\u001b[39m: [\u001b[38;5;28mbool\u001b[39m(agent.carry) \u001b[38;5;28;01mfor\u001b[39;00m agent \u001b[38;5;129;01min\u001b[39;00m model.schedule.agents],\n\u001b[32m     40\u001b[39m \n\u001b[32m     41\u001b[39m     \u001b[38;5;66;03m# Fuego\u001b[39;00m\n\u001b[32m     42\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mfires\u001b[39m\u001b[33m\"\u001b[39m: [[\u001b[38;5;28mint\u001b[39m(cell.row), \u001b[38;5;28mint\u001b[39m(cell.col), \u001b[38;5;28mint\u001b[39m(cell.state)]\n\u001b[32m     43\u001b[39m               \u001b[38;5;28;01mfor\u001b[39;00m row \u001b[38;5;129;01min\u001b[39;00m model.fire_grid \u001b[38;5;28;01mfor\u001b[39;00m cell \u001b[38;5;129;01min\u001b[39;00m row \u001b[38;5;28;01mif\u001b[39;00m cell.state != Fire.EMPTY],\n\u001b[32m     44\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mfire_grid\u001b[39m\u001b[33m\"\u001b[39m: [[\u001b[38;5;28mint\u001b[39m(cell.row), \u001b[38;5;28mint\u001b[39m(cell.col), \u001b[38;5;28mint\u001b[39m(cell.state)]\n\u001b[32m     45\u001b[39m                   \u001b[38;5;28;01mfor\u001b[39;00m row \u001b[38;5;129;01min\u001b[39;00m model.fire_grid \u001b[38;5;28;01mfor\u001b[39;00m cell \u001b[38;5;129;01min\u001b[39;00m row],\n\u001b[32m     46\u001b[39m \n\u001b[32m     47\u001b[39m     \u001b[38;5;66;03m# POI (víctimas / falsas alarmas)\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m48\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mpois\u001b[39m\u001b[33m\"\u001b[39m: [[\u001b[38;5;28mint\u001b[39m(poi.row), \u001b[38;5;28mint\u001b[39m(poi.col), \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mpoi\u001b[49m\u001b[43m.\u001b[49m\u001b[43mrole\u001b[49m\u001b[43m)\u001b[49m, \u001b[38;5;28mbool\u001b[39m(poi.revealed)]\n\u001b[32m     49\u001b[39m              \u001b[38;5;28;01mfor\u001b[39;00m row \u001b[38;5;129;01min\u001b[39;00m model.poi_grid \u001b[38;5;28;01mfor\u001b[39;00m poi \u001b[38;5;129;01min\u001b[39;00m row \u001b[38;5;28;01mif\u001b[39;00m poi \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m],\n\u001b[32m     50\u001b[39m \n\u001b[32m     51\u001b[39m     \u001b[38;5;66;03m# Paredes\u001b[39;00m\n\u001b[32m     52\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mwall_grid\u001b[39m\u001b[33m\"\u001b[39m: [[[\u001b[38;5;28mint\u001b[39m(v) \u001b[38;5;28;01mfor\u001b[39;00m v \u001b[38;5;129;01min\u001b[39;00m cell.get_positions()] \u001b[38;5;28;01mfor\u001b[39;00m cell \u001b[38;5;129;01min\u001b[39;00m row] \u001b[38;5;28;01mfor\u001b[39;00m row \u001b[38;5;129;01min\u001b[39;00m model.wall_grid],\n\u001b[32m     53\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mwall_damages\u001b[39m\u001b[33m\"\u001b[39m: [[[\u001b[38;5;28mint\u001b[39m(v) \u001b[38;5;28;01mfor\u001b[39;00m v \u001b[38;5;129;01min\u001b[39;00m cell.get_damages()] \u001b[38;5;28;01mfor\u001b[39;00m cell \u001b[38;5;129;01min\u001b[39;00m row] \u001b[38;5;28;01mfor\u001b[39;00m row \u001b[38;5;129;01min\u001b[39;00m model.wall_grid],\n\u001b[32m     54\u001b[39m \n\u001b[32m     55\u001b[39m     \u001b[38;5;66;03m# Puertas\u001b[39;00m\n\u001b[32m     56\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mdoor_list\u001b[39m\u001b[33m\"\u001b[39m: [[\n\u001b[32m     57\u001b[39m         [\u001b[38;5;28mint\u001b[39m(x) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m door.cell1],\n\u001b[32m     58\u001b[39m         [\u001b[38;5;28mint\u001b[39m(y) \u001b[38;5;28;01mfor\u001b[39;00m y \u001b[38;5;129;01min\u001b[39;00m door.cell2],\n\u001b[32m     59\u001b[39m         \u001b[38;5;28mint\u001b[39m(door.state)\n\u001b[32m     60\u001b[39m     ] \u001b[38;5;28;01mfor\u001b[39;00m door \u001b[38;5;129;01min\u001b[39;00m door_list],\n\u001b[32m     61\u001b[39m \n\u001b[32m     62\u001b[39m     \u001b[38;5;66;03m# Datos globales del modelo\u001b[39;00m\n\u001b[32m     63\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mmodel.collapsed\u001b[39m\u001b[33m\"\u001b[39m: \u001b[38;5;28mbool\u001b[39m(model.collapsed),\n\u001b[32m     64\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mtotal_damage\u001b[39m\u001b[33m\"\u001b[39m: \u001b[38;5;28mint\u001b[39m(model.total_damage),\n\u001b[32m     65\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mrescued\u001b[39m\u001b[33m\"\u001b[39m: \u001b[38;5;28mint\u001b[39m(model.rescued),\n\u001b[32m     66\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mlost\u001b[39m\u001b[33m\"\u001b[39m: \u001b[38;5;28mint\u001b[39m(model.lost),\n\u001b[32m     67\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mmax_damage\u001b[39m\u001b[33m\"\u001b[39m: \u001b[38;5;28mint\u001b[39m(model.max_damage),\n\u001b[32m     68\u001b[39m }\n\u001b[32m     70\u001b[39m \u001b[38;5;66;03m# Enviar JSON limpio\u001b[39;00m\n\u001b[32m     71\u001b[39m message = json.dumps(data, default=to_native)\n",
-            "\u001b[31mValueError\u001b[39m: invalid literal for int() with base 10: 'f'"
+            "Daño en pared por fuego en: (2, 5) lado 3\n",
+            "Enviado paso 0\n",
+            " Rana apagó fuego en (3, 5)\n",
+            " Rana dañó pared en (5, 0) lado 1\n",
+            " Rana eliminó humo en (0, 1)\n",
+            " Rana apagó fuego en (5, 5)\n",
+            " Rana abrió puerta en (5, 2)-(5, 3)\n",
+            " Rana dañó pared en (3, 0) lado 0\n",
+            "Enviado paso 1\n",
+            " Rana cerró puerta en (5, 0)-(6, 0)\n",
+            " Rana apagó fuego en (3, 0)\n",
+            " Rana movida a (0, 0)\n",
+            " Rana apagó fuego en (3, 5)\n",
+            " Rana abrió puerta en (5, 5)-(6, 5)\n",
+            " Rana cerró puerta en (5, 2)-(5, 3)\n",
+            "Daño en pared por fuego en: (2, 2) lado 0\n",
+            "Enviado paso 2\n",
+            " Rana cerró puerta en (5, 5)-(6, 5)\n",
+            " Rana dañó pared en (0, 0) lado 0\n",
+            " Rana apagó fuego en (3, 5)\n",
+            " Rana abrió puerta en (5, 2)-(5, 3)\n",
+            "Pared destruida en lado 0\n",
+            "Daño en pared por fuego en: (2, 7) lado 0\n",
+            "Enviado paso 3\n",
+            " Rana dañó pared en (0, 0) lado 0\n",
+            " Rana dañó pared en (3, 0) lado 0\n",
+            " Rana apagó fuego en (5, 0)\n",
+            "Pared destruida en lado 0\n",
+            "Daño en pared por fuego en: (0, 7) lado 0\n",
+            "Pared destruida en lado 3\n",
+            "Daño en pared por fuego en: (1, 6) lado 3\n",
+            "Enviado paso 4\n",
+            " Rana apagó fuego en (3, 0)\n",
+            " Rana dañó pared en (5, 0) lado 1\n",
+            " Rana apagó fuego en (3, 5)\n",
+            " Rana cerró puerta en (5, 2)-(5, 3)\n",
+            " Rana abrió puerta en (5, 5)-(6, 5)\n",
+            "Daño en pared por fuego en: (2, 1) lado 2\n",
+            "Enviado paso 5\n",
+            " Rana cerró puerta en (5, 5)-(6, 5)\n",
+            " Rana abrió puerta en (5, 2)-(5, 3)\n",
+            " Rana apagó fuego en (3, 5)\n",
+            " Rana dañó pared en (0, 0) lado 0\n",
+            " Rana abrió puerta en (5, 0)-(6, 0)\n",
+            " Rana apagó fuego en (3, 0)\n",
+            "Daño en pared por fuego en: (4, 1) lado 1\n",
+            "Daño en pared por fuego en: (5, 0) lado 2\n",
+            "Enviado paso 6\n",
+            " Rana dañó pared en (0, 0) lado 0\n",
+            " Rana abrió puerta en (5, 5)-(6, 5)\n",
+            " Rana apagó fuego en (3, 5)\n",
+            " Rana cerró puerta en (5, 2)-(5, 3)\n",
+            "Pared destruida en lado 2\n",
+            "Daño en pared por fuego en: (3, 3) lado 2\n",
+            "Enviado paso 7\n",
+            " Rana apagó fuego en (5, 3)\n",
+            " Rana dañó pared en (3, 0) lado 0\n",
+            " Rana apagó fuego en (5, 0)\n",
+            " Rana cerró puerta en (5, 5)-(6, 5)\n",
+            " Rana apagó fuego en (3, 5)\n",
+            "Daño en pared por fuego en: (1, 7) lado 2\n",
+            "Daño en pared por fuego en: (0, 6) lado 3\n",
+            "Enviado paso 8\n",
+            " Rana dañó pared en (5, 0) lado 1\n",
+            " Rana dañó pared en (3, 0) lado 0\n",
+            " Rana dañó pared en (0, 0) lado 0\n",
+            "Daño en pared por fuego en: (5, 4) lado 2\n",
+            "Enviado paso 9\n",
+            " Rana dañó pared en (0, 0) lado 0\n",
+            " Rana apagó fuego en (5, 5)\n",
+            " Rana abrió puerta en (5, 2)-(5, 3)\n",
+            " Rana cerró puerta en (5, 0)-(6, 0)\n",
+            " Rana apagó fuego en (3, 5)\n",
+            "Daño en pared por fuego en: (5, 4) lado 2\n",
+            "Enviado paso 10\n",
+            " Rana cerró puerta en (5, 2)-(5, 3)\n",
+            " Rana apagó fuego en (3, 5)\n",
+            " Rana abrió puerta en (5, 5)-(6, 5)\n",
+            " Rana dañó pared en (3, 0) lado 0\n",
+            "Pared destruida en lado 1\n",
+            "Daño en pared por fuego en: (4, 3) lado 1\n",
+            "Pared destruida en lado 2\n",
+            "Daño en pared por fuego en: (5, 2) lado 2\n",
+            "Enviado paso 11\n",
+            " Rana dañó pared en (3, 0) lado 0\n",
+            " Rana cerró puerta en (5, 5)-(6, 5)\n",
+            " Rana apagó fuego en (3, 5)\n",
+            " Rana dañó pared en (5, 0) lado 1\n",
+            " Rana dañó pared en (0, 0) lado 0\n",
+            " Rana abrió puerta en (5, 2)-(5, 3)\n",
+            "Daño en pared por fuego en: (1, 7) lado 2\n",
+            "Daño en pared por fuego en: (0, 6) lado 3\n",
+            "Enviado paso 12\n",
+            " Rana abrió puerta en (5, 5)-(6, 5)\n",
+            " Rana dañó pared en (5, 0) lado 1\n",
+            " Rana dañó pared en (0, 0) lado 0\n",
+            " Rana apagó fuego en (3, 5)\n",
+            " Rana apagó fuego en (5, 3)\n",
+            "Daño en pared por fuego en: (1, 7) lado 2\n",
+            "Daño en pared por fuego en: (0, 6) lado 3\n",
+            "Enviado paso 13\n",
+            " Rana apagó fuego en (3, 0)\n",
+            "Pared destruida en lado 2\n",
+            "Daño en pared por fuego en: (1, 5) lado 2\n",
+            "Enviado paso 14\n",
+            " Rana cerró puerta en (5, 2)-(5, 3)\n",
+            " Rana dañó pared en (0, 0) lado 0\n",
+            " Rana apagó fuego en (5, 5)\n",
+            " Rana apagó fuego en (3, 5)\n",
+            " Rana apagó fuego en (3, 0)\n",
+            " Rana apagó fuego en (5, 0)\n",
+            "Pared destruida en lado 0\n",
+            "Daño en pared por fuego en: (4, 6) lado 0\n",
+            "Enviado paso 15\n",
+            " Rana dañó pared en (3, 0) lado 0\n",
+            " Rana abrió puerta en (5, 2)-(5, 3)\n",
+            " Rana apagó fuego en (3, 5)\n",
+            " Rana apagó fuego en (5, 0)\n",
+            " Rana dañó pared en (0, 0) lado 0\n",
+            " Rana apagó fuego en (5, 5)\n",
+            "Daño en pared por fuego en: (0, 7) lado 1\n",
+            "Daño en pared por fuego en: (1, 6) lado 2\n",
+            "Enviado paso 16\n",
+            " Rana apagó fuego en (5, 5)\n",
+            " Rana apagó fuego en (5, 3)\n",
+            " Rana apagó fuego en (3, 5)\n",
+            " Rana apagó fuego en (5, 0)\n",
+            "Daño en pared por fuego en: (2, 6) lado 1\n",
+            "Enviado paso 17\n",
+            " Rana abrió puerta en (5, 0)-(6, 0)\n",
+            " Rana cerró puerta en (5, 5)-(6, 5)\n",
+            " Rana dañó pared en (0, 0) lado 0\n",
+            " Rana cerró puerta en (5, 2)-(5, 3)\n",
+            " Rana apagó fuego en (3, 5)\n",
+            " Rana dañó pared en (3, 0) lado 0\n",
+            "DERROTA: edificio colapsado\n",
+            "Enviado paso 18\n",
+            "Enviado paso 19\n",
+            "Enviado paso 20\n",
+            "Enviado paso 21\n",
+            "Enviado paso 22\n",
+            "Enviado paso 23\n",
+            "Enviado paso 24\n",
+            "Enviado paso 25\n",
+            "Enviado paso 26\n",
+            "Enviado paso 27\n",
+            "Enviado paso 28\n",
+            "Enviado paso 29\n"
           ]
         }
       ],
