--- a/Agentes/RanaBomberos.ipynb
+++ b/Agentes/RanaBomberos.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -28,6 +14,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 62,
+      "metadata": {
+        "id": "mj443twKGWGE"
+      },
+      "outputs": [],
       "source": [
         "# ------------------------------\n",
         "# Valores para el mapa\n",
@@ -47,15 +38,15 @@
         "    \"down\":  (1, 0, 2),   # fila+1, col, lado 2\n",
         "    \"right\": (0, 1, 3)    # fila, col+1, lado 3\n",
         "}"
-      ],
-      "metadata": {
-        "id": "mj443twKGWGE"
-      },
-      "execution_count": 62,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 63,
+      "metadata": {
+        "id": "r25XD3OmGYRe"
+      },
+      "outputs": [],
       "source": [
         "#Conexion\n",
         "import socket\n",
@@ -71,15 +62,34 @@
         "import  random\n",
         "from os import read\n",
         "from heapq import heappush, heappop\n"
-      ],
-      "metadata": {
-        "id": "r25XD3OmGYRe"
-      },
-      "execution_count": 63,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 64,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KACCqaAiGabe",
+        "outputId": "762f564f-b8e6-456f-8bd6-e5179d442dca"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['1011 1110 1011 1010 1000 1100 1001 1100\\n', '1000 1000 1010 1110 0011 0110 0011 0110\\n', '0011 0110 1101 1101 1111 1011 1110 1101\\n', '1011 1010 0110 0111 1011 1010 1010 0110\\n', '1001 1110 1001 1100 1101 1101 1101 1101\\n', '0111 1011 0010 0110 0111 0111 0111 0111\\n']\n",
+            "['1 1 f\\n', '1 2 f\\n', '1 8 v\\n', '2 4 v\\n', '3 5 v\\n', '4 1 v\\n', '6 2 v\\n', '6 5 v\\n', '6 7 v\\n']\n",
+            "['1 3\\n', '1 7\\n', '2 3\\n', '3 3\\n', '5 2\\n', '5 5\\n', '5 7\\n', '5 8\\n', '6 3\\n']\n",
+            "['1 2 1 3\\n', '1 6 1 7\\n', '2 4 2 5\\n', '2 8 3 8\\n', '3 3 3 4\\n', '3 4 3 5\\n', '3 5 3 6\\n', '3 6 4 6\\n', '4 4 5 4\\n', '4 5 5 5\\n', '4 6 5 6\\n', '5 2 5 3\\n', '6 6 6 7\\n']\n",
+            "['1 4\\n', '1 6\\n', '2 1\\n', '4 6\\n', '6 4\\n', '6 6\\n']\n",
+            "Puertas: [(1, 0, 2, 0), (5, 0, 6, 0), (3, 1, 4, 1), (7, 1, 7, 2), (2, 2, 3, 2), (3, 2, 4, 2), (4, 2, 5, 2), (5, 2, 5, 3), (3, 3, 3, 4), (4, 3, 4, 4), (5, 3, 5, 4), (1, 4, 2, 4), (5, 5, 6, 5)]\n",
+            "Puntos de acceso: [(3, 0), (5, 0), (0, 1), (5, 3), (3, 5), (5, 5)]\n",
+            "Falsas alarmas y víctimas: [(0, 0, 'f'), (0, 1, 'f'), (0, 7, 'v'), (1, 3, 'v'), (2, 4, 'v'), (3, 0, 'v'), (5, 1, 'v'), (5, 4, 'v'), (5, 6, 'v')]\n"
+          ]
+        }
+      ],
       "source": [
         "fileref = open(\"ArchProj.txt\", \"r\")\n",
         "texto = fileref.readlines()\n",
@@ -148,34 +158,53 @@
         "print(\"Puntos de acceso:\", access_coords)\n",
         "false_alarm_victims_coords = parse_positions_v_f(victim)\n",
         "print(\"Falsas alarmas y víctimas:\", false_alarm_victims_coords)\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "KACCqaAiGabe",
-        "outputId": "762f564f-b8e6-456f-8bd6-e5179d442dca"
-      },
-      "execution_count": 64,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "['1011 1110 1011 1010 1000 1100 1001 1100\\n', '1000 1000 1010 1110 0011 0110 0011 0110\\n', '0011 0110 1101 1101 1111 1011 1110 1101\\n', '1011 1010 0110 0111 1011 1010 1010 0110\\n', '1001 1110 1001 1100 1101 1101 1101 1101\\n', '0111 1011 0010 0110 0111 0111 0111 0111\\n']\n",
-            "['1 1 f\\n', '1 2 f\\n', '1 8 v\\n', '2 4 v\\n', '3 5 v\\n', '4 1 v\\n', '6 2 v\\n', '6 5 v\\n', '6 7 v\\n']\n",
-            "['1 3\\n', '1 7\\n', '2 3\\n', '3 3\\n', '5 2\\n', '5 5\\n', '5 7\\n', '5 8\\n', '6 3\\n']\n",
-            "['1 2 1 3\\n', '1 6 1 7\\n', '2 4 2 5\\n', '2 8 3 8\\n', '3 3 3 4\\n', '3 4 3 5\\n', '3 5 3 6\\n', '3 6 4 6\\n', '4 4 5 4\\n', '4 5 5 5\\n', '4 6 5 6\\n', '5 2 5 3\\n', '6 6 6 7\\n']\n",
-            "['1 4\\n', '1 6\\n', '2 1\\n', '4 6\\n', '6 4\\n', '6 6\\n']\n",
-            "Puertas: [(1, 0, 2, 0), (5, 0, 6, 0), (3, 1, 4, 1), (7, 1, 7, 2), (2, 2, 3, 2), (3, 2, 4, 2), (4, 2, 5, 2), (5, 2, 5, 3), (3, 3, 3, 4), (4, 3, 4, 4), (5, 3, 5, 4), (1, 4, 2, 4), (5, 5, 6, 5)]\n",
-            "Puntos de acceso: [(3, 0), (5, 0), (0, 1), (5, 3), (3, 5), (5, 5)]\n",
-            "Falsas alarmas y víctimas: [(0, 0, 'f'), (0, 1, 'f'), (0, 7, 'v'), (1, 3, 'v'), (2, 4, 'v'), (3, 0, 'v'), (5, 1, 'v'), (5, 4, 'v'), (5, 6, 'v')]\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 65,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 315
+        },
+        "id": "f6RCbP00Gb5a",
+        "outputId": "a24a56e1-61b1-4273-b1a2-f9931160e4c8"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[1, 0, 1, 1] [1, 1, 1, 0] [1, 0, 1, 1] [1, 0, 1, 0] [1, 0, 0, 0] [1, 1, 0, 0] [1, 0, 0, 1] [1, 1, 0, 0] \n",
+            "[0, 0, 0, 0] [1, 0, 0, 0] [1, 0, 1, 0] [1, 1, 1, 0] [0, 0, 1, 1] [0, 1, 1, 0] [0, 0, 1, 1] [0, 1, 1, 0] \n",
+            "[0, 0, 1, 1] [0, 1, 1, 0] [1, 1, 0, 1] [1, 1, 0, 1] [1, 1, 1, 1] [1, 0, 1, 1] [1, 1, 1, 0] [1, 1, 0, 1] \n",
+            "[1, 0, 1, 1] [1, 0, 1, 0] [0, 1, 1, 0] [0, 1, 1, 1] [1, 0, 1, 1] [0, 0, 0, 0] [1, 0, 1, 0] [0, 1, 1, 0] \n",
+            "[1, 0, 0, 1] [1, 1, 1, 0] [1, 0, 0, 1] [1, 1, 0, 0] [1, 1, 0, 1] [1, 1, 0, 1] [1, 1, 0, 1] [1, 1, 0, 1] \n",
+            "[0, 1, 1, 1] [1, 0, 1, 1] [0, 0, 1, 0] [0, 0, 0, 0] [0, 1, 1, 1] [0, 0, 0, 0] [0, 1, 1, 1] [0, 1, 1, 1] \n",
+            "[(2, 0), (6, 0), (2, 1), (2, 2), (1, 4), (4, 4), (6, 4), (7, 4), (2, 5)]\n",
+            "0 0 2 0 0 0 2 0 \n",
+            "0 0 2 0 0 0 0 0 \n",
+            "0 0 2 0 0 0 0 0 \n",
+            "0 0 0 0 0 0 0 0 \n",
+            "0 2 0 0 2 0 2 2 \n",
+            "0 0 2 0 0 0 0 0 \n"
+          ]
+        },
+        {
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'\\nprint(\"Matriz de POIs:\")\\nfor i in range(height):\\n    for j in range(width):\\n        if matriz_POI[i][j] is None:\\n            print(\" . \", end=\" \")\\n        else:\\n            print(f\" {matriz_POI[i][j].role} \", end=\" \")\\n    print()\\n'"
+            ]
+          },
+          "execution_count": 65,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "###############################################################################\n",
         "\n",
@@ -430,62 +459,24 @@
         "            print(f\" {matriz_POI[i][j].role} \", end=\" \")\n",
         "    print()\n",
         "\"\"\"\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 315
-        },
-        "id": "f6RCbP00Gb5a",
-        "outputId": "a24a56e1-61b1-4273-b1a2-f9931160e4c8"
-      },
-      "execution_count": 65,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[1, 0, 1, 1] [1, 1, 1, 0] [1, 0, 1, 1] [1, 0, 1, 0] [1, 0, 0, 0] [1, 1, 0, 0] [1, 0, 0, 1] [1, 1, 0, 0] \n",
-            "[0, 0, 0, 0] [1, 0, 0, 0] [1, 0, 1, 0] [1, 1, 1, 0] [0, 0, 1, 1] [0, 1, 1, 0] [0, 0, 1, 1] [0, 1, 1, 0] \n",
-            "[0, 0, 1, 1] [0, 1, 1, 0] [1, 1, 0, 1] [1, 1, 0, 1] [1, 1, 1, 1] [1, 0, 1, 1] [1, 1, 1, 0] [1, 1, 0, 1] \n",
-            "[1, 0, 1, 1] [1, 0, 1, 0] [0, 1, 1, 0] [0, 1, 1, 1] [1, 0, 1, 1] [0, 0, 0, 0] [1, 0, 1, 0] [0, 1, 1, 0] \n",
-            "[1, 0, 0, 1] [1, 1, 1, 0] [1, 0, 0, 1] [1, 1, 0, 0] [1, 1, 0, 1] [1, 1, 0, 1] [1, 1, 0, 1] [1, 1, 0, 1] \n",
-            "[0, 1, 1, 1] [1, 0, 1, 1] [0, 0, 1, 0] [0, 0, 0, 0] [0, 1, 1, 1] [0, 0, 0, 0] [0, 1, 1, 1] [0, 1, 1, 1] \n",
-            "[(2, 0), (6, 0), (2, 1), (2, 2), (1, 4), (4, 4), (6, 4), (7, 4), (2, 5)]\n",
-            "0 0 2 0 0 0 2 0 \n",
-            "0 0 2 0 0 0 0 0 \n",
-            "0 0 2 0 0 0 0 0 \n",
-            "0 0 0 0 0 0 0 0 \n",
-            "0 2 0 0 2 0 2 2 \n",
-            "0 0 2 0 0 0 0 0 \n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'\\nprint(\"Matriz de POIs:\")\\nfor i in range(height):\\n    for j in range(width):\\n        if matriz_POI[i][j] is None:\\n            print(\" . \", end=\" \")\\n        else:\\n            print(f\" {matriz_POI[i][j].role} \", end=\" \")\\n    print()\\n'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 65
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": 65,
       "metadata": {
         "id": "UzZ2deBWGeFf"
       },
-      "execution_count": 65,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
+      "execution_count": 66,
+      "metadata": {
+        "id": "aDz5tkbyGhRw"
+      },
+      "outputs": [],
       "source": [
         "# ------------------------------\n",
         "# Diccionario de direcciones (fila, col, lado)\n",
@@ -756,30 +747,11 @@
         "            grid[y][x] = 1   # usar y como fila, x como columna\n",
         "    return grid\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "aDz5tkbyGhRw"
-      },
-      "execution_count": 66,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "total_rescued, total_lost, total_wins, total_losses = 0, 0, 0, 0\n",
-        "N = 100\n",
-        "\n",
-        "for _ in range(N):\n",
-        "    model = RanaModel()\n",
-        "    for i in range(1000):\n",
-        "        model.step()\n",
-        "        if model.collapsed or model.rescued >= model.rescue_goal or model.lost >= model.lose_limit:\n",
-        "            break\n",
-        "    total_rescued += model.rescued\n",
-        "    total_lost += model.lost\n",
-        "    total_wins += model.win_counter\n",
-        "    total_losses += model.lose_counter\n"
-      ],
+      "execution_count": 67,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -787,11 +759,10 @@
         "id": "cT9t1bBPGllV",
         "outputId": "629221ee-79dc-4556-9c32-4e396ce89f71"
       },
-      "execution_count": 67,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Agentes creados: 6\n",
             " Rana dañó pared en (3, 0) lado 0\n",
@@ -2768,16 +2739,16 @@
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "/tmp/ipython-input-3501503208.py:164: DeprecationWarning: The time module and all its Schedulers are deprecated and will be removed in a future version. They can be replaced with AgentSet functionality. See the migration guide for details. https://mesa.readthedocs.io/latest/migration_guide.html#time-and-schedulers\n",
             "  self.schedule = RandomActivation(self)\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\u001b[1;30;43mSe han truncado las últimas 5000 líneas del flujo de salida.\u001b[0m\n",
             " Rana apagó fuego en (3, 5)\n",
@@ -7782,16 +7753,26 @@
             "DERROTA: edificio colapsado\n"
           ]
         }
+      ],
+      "source": [
+        "total_rescued, total_lost, total_wins, total_losses = 0, 0, 0, 0\n",
+        "N = 100\n",
+        "\n",
+        "for _ in range(N):\n",
+        "    model = RanaModel()\n",
+        "    for i in range(1000):\n",
+        "        model.step()\n",
+        "        if model.collapsed or model.rescued >= model.rescue_goal or model.lost >= model.lose_limit:\n",
+        "            break\n",
+        "    total_rescued += model.rescued\n",
+        "    total_lost += model.lost\n",
+        "    total_wins += model.win_counter\n",
+        "    total_losses += model.lose_counter\n"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(\"Promedio rescates:\", total_rescued/N)\n",
-        "print(\"Promedio pérdidas:\", total_lost/N)\n",
-        "print(\"Porcentaje victorias:\", (total_wins/N)*100)\n",
-        "print(\"Porcentaje derrotas:\", (total_losses/N)*100)"
-      ],
+      "execution_count": 68,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -7799,11 +7780,10 @@
         "id": "3p7Zg3YcG7ne",
         "outputId": "ceef1b8c-131d-4aa7-deba-c73ed8e8a435"
       },
-      "execution_count": 68,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Promedio rescates: 0.01\n",
             "Promedio pérdidas: 0.07\n",
@@ -7811,10 +7791,21 @@
             "Porcentaje derrotas: 100.0\n"
           ]
         }
+      ],
+      "source": [
+        "print(\"Promedio rescates:\", total_rescued/N)\n",
+        "print(\"Promedio pérdidas:\", total_lost/N)\n",
+        "print(\"Porcentaje victorias:\", (total_wins/N)*100)\n",
+        "print(\"Porcentaje derrotas:\", (total_losses/N)*100)"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "25oynljrTT1r"
+      },
+      "outputs": [],
       "source": [
         "#Conexion local a C#\n",
         "#Código creado cguiado mediante IA\n",
@@ -7873,12 +7864,22 @@
         "finally:\n",
         "    conn.close()\n",
         "    server.close()"
-      ],
-      "metadata": {
-        "id": "25oynljrTT1r"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.13.5"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
